# freddy_bringup

./: CMakeLists.txt  README.md  package.xml
ros/config/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  teb_local_planner_params.yaml
ros/launch/: amcl.launch  bringup.launch  bringup_sim.launch  gmapping.launch  move_base_dwa.launch  move_base_teb.launch  navigation.launch
ros/launch/sensors/: hokuyo.launch
